--- a/composer.json
+++ b/composer.json
@@ -21,27 +21,49 @@
         "ext-libxml": "*",
         "ext-simplexml": "*",
         "ext-xml": "*",
+        "doctrine/dbal": "^3",
+        "doctrine/doctrine-bundle": "^2.12",
+        "doctrine/doctrine-migrations-bundle": "^3.3",
+        "doctrine/orm": "^3.2",
+        "easycorp/easyadmin-bundle": "^4.11",
         "league/commonmark": "^2.4",
-        "symfony/asset": "~7.1.0",
-        "symfony/asset-mapper": "~7.1.0",
+        "phpdocumentor/reflection-docblock": "^5.4",
+        "phpstan/phpdoc-parser": "^1.29",
+        "symfony/asset": "7.1.*",
+        "symfony/asset-mapper": "7.1.*",
         "symfony/console": "~7.1.0",
+        "symfony/doctrine-messenger": "7.1.*",
         "symfony/dotenv": "~7.1.0",
+        "symfony/expression-language": "7.1.*",
         "symfony/flex": "^2",
         "symfony/form": "~7.1.0",
         "symfony/framework-bundle": "~7.1.0",
+        "symfony/http-client": "7.1.*",
         "symfony/http-foundation": "~7.1.0",
         "symfony/http-kernel": "~7.1.0",
         "symfony/intl": "~7.1.0",
+        "symfony/mailer": "7.1.*",
+        "symfony/mime": "7.1.*",
         "symfony/monolog-bundle": "^3.8",
+        "symfony/notifier": "7.1.*",
+        "symfony/process": "7.1.*",
+        "symfony/property-access": "7.1.*",
+        "symfony/property-info": "7.1.*",
         "symfony/routing": "~7.1.0",
         "symfony/runtime": "~7.1.0",
-        "symfony/stimulus-bundle": "^2.0",
+        "symfony/security-bundle": "7.1.*",
+        "symfony/serializer": "7.1.*",
+        "symfony/stimulus-bundle": "^2.19",
         "symfony/string": "~7.1.0",
+        "symfony/translation": "7.1.*",
         "symfony/twig-bundle": "~7.1.0",
+        "symfony/ux-live-component": "^2.19",
         "symfony/ux-turbo": "^2.16",
+        "symfony/ux-twig-component": "^2.19",
         "symfony/validator": "~7.1.0",
         "symfony/web-link": "~7.1.0",
         "symfony/yaml": "~7.1.0",
+        "symfonycasts/tailwind-bundle": "^0.6.0",
         "twig/extra-bundle": "^3.0",
         "twig/markdown-extra": "^3.7",
         "twig/twig": "^3.0"
@@ -54,6 +76,9 @@
         "roave/security-advisories": "dev-latest",
         "symfony/browser-kit": "~7.1.0",
         "symfony/css-selector": "~7.1.0",
+        "symfony/debug-bundle": "7.1.*",
+        "symfony/maker-bundle": "^1.0",
+        "symfony/phpunit-bridge": "^7.1",
         "symfony/requirements-checker": "^2.0",
         "symfony/stopwatch": "~7.1.0",
         "symfony/web-profiler-bundle": "~7.1.0"
