--- a/config/services.yaml
+++ b/config/services.yaml
@@ -4,31 +4,31 @@
 # Put parameters here that don't need to change on each machine where the app is deployed
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
-    # System parameters: https://symfony.com/doc/current/performance.html
-    .container.dumper.inline_factories: true
+  # System parameters: https://symfony.com/doc/current/performance.html
+  .container.dumper.inline_factories: true
 
-    # App parameters
-    brand: 'MicroSymfony'
-    brand_html: '<b>Micro</b>Symfony 🎶'
+  # App parameters
+  brand: 'ynohtna.fr'
+  brand_html: '<b>ynohtna</b>.fr'
 
 services:
-    # default configuration for services in *this* file
-    _defaults:
-        autowire: true      # Automatically injects dependencies in your services.
-        autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
-        bind:
-            # bind examples
-            #string $environment: '%kernel.environment%'
-            #string $debug: '%kernel.debug%'
+  # default configuration for services in *this* file
+  _defaults:
+    autowire: true      # Automatically injects dependencies in your services.
+    autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
+    bind:
+    # bind examples
+    #string $environment: '%kernel.environment%'
+    #string $debug: '%kernel.debug%'
 
-    # makes classes in src/ available to be used as services
-    # this creates a service per class whose id is the fully-qualified class name
-    App\:
-        resource: '../src/'
-        exclude:
-            - '../src/DependencyInjection/'
-            - '../src/Entity/'
-            - '../src/Kernel.php'
+  # makes classes in src/ available to be used as services
+  # this creates a service per class whose id is the fully-qualified class name
+  App\:
+    resource: '../src/'
+    exclude:
+      - '../src/DependencyInjection/'
+      - '../src/Entity/'
+      - '../src/Kernel.php'
 
-    # add more service definitions when explicit configuration is needed
-    # please note that last definitions always *replace* previous ones
+  # add more service definitions when explicit configuration is needed
+  # please note that last definitions always *replace* previous ones
